prometheus/grafanan/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana-service
  namespace: mon
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: grafana
  type: ClusterIP
