prometheus/grafanan/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: mon
  annotations:
    kubernets.io/ingress.class: "kong"
spec:
  tls:
  - hosts:
    - "*.realibox.cn"        #与secret证书的域名需要保持一致
    secretName: realibox-cn   #secret证书的名称
  rules:
  - host: grafana.realibox.cn
    http:
      paths:
      - path:
        backend:
          serviceName: grafana-service
          servicePort: 3000
